# MitoBee

./: .gitattributes  .gitignore  Changes.md  MitoBee.CITATION  README.md  environment.yaml  mitobee.sh  mitomee.sh  pyproject.toml
config/: config.yaml
config/workflow/: Snakefile
config/workflow/envs/: fastp.yaml
config/workflow/rules/: 0.preflight.smk  1.qc.smk  2.mapping.smk  3.Mitogenomes.smk  QC-reports.smk
mitobee/: __main__.py  _version.py
mitomee/: __main__.py
output_tree/: config.yaml
output_tree/PROCESSING/2_host_cleaned/mitogenome/: all_samples.fasta  all_samples_clean.fasta  final_mitogenome.aln
test-files/: am-dh4.fasta.fai
test-files/mitogenomes/: ref_dm739.fasta  ref_lamarckii.fasta  test1_consensus.fasta  test2_consensus.fasta
test-files/ref-set-genome/: ac.fasta  am-dh4.fasta  bombus_lapidarius.fasta
workflow/: Search.Snakefile  Snakefile  TreeBuild.Snakefile
workflow/envs/: bcftools.yaml  fastp.yaml  mafft.yaml  minimap2.yaml  mmseqs2.yaml
workflow/rules/: 0.preflight.smk  1.qc.smk  2.mapping-search.smk  2.mapping.smk  3.Mitogenomes.smk  Mitogenome-reports.smk  QC-reports.smk
workflow/scripts/: score_hosts.py
